--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main class="max-w-1310 mx-auto px-20">
-    <div class="flex gap-63">
+    <div class="grid gap-63">
         <div class="w-548 mtop-100">
             <h1 class="text-32 md-text-52 text-700 text-black font-raleway">
                 Create a modern and unique design your dream
