--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="owerflov-hidden ">
                         <img src="./images/Rectangle 13.png" width="100%" height="100%" class="object-cover">
                     </div>
-                    <div class="position-absalyute-3">
+                    <div class="absolute bottom-25 left-25">
                         <span class="text-700 text-white md-text-24 text-18 font-raleway">Interior Design</span>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     <div class="owerflov-hidden ">
                         <img src="./images/Rectangle 10.png" width="100%" height="100%" class="object-cover">
                     </div>
-                    <div class="position-absalyute-3">
+                    <div class="absolute bottom-25 left-25">
                         <span class="text-700 text-white md-text-24 text-18 font-raleway">Architecture</span>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                     <div class="owerflov-hidden ">
                         <img src="./images/Rectangle 14.png" width="100%" height="100%" class="object-cover">
                     </div>
-                    <div class="position-absalyute-3">
+                    <div class="absolute bottom-25 left-25">
                         <span class="text-700 text-white md-text-24 text-18 font-raleway">Furniture Design</span>
                     </div>
                 </div>
