--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             </div>
             <div class="py-27  hidden md-block">
                 <button
-                    class="flex icetms-center gap-15 py-13 px-25 bg-white  border-black hover font-Inconsolata ">CONTACT
-                    US <img src="./images/arrow-up-right.svg"></button>
+                    class="flex icetms-center gap-15 py-13 px-25 bg-white  border-black hover font-Inconsolata "> <span class="text-black text-18 text-700 font-Inconsolata">CONTACT
+                        US</span> <img src="./images/arrow-up-right.svg"></button>
             </div>
             <div class="block md-hidden">
                 <a href="#"><img src="./images/align-right.svg"></a>
@@ -45,8 +45,8 @@
                 </p>
                 <div class="ptop-25 md-ptop-50">
                     <button
-                        class="flex icetms-center gap-15 py-13 px-25 bg-black text-white border-black  font-Inconsolata ">VIEW
-                        A PROJECT <img src="./images/arrow-right.svg"></button>
+                        class="flex icetms-center gap-15 py-13 px-25 bg-black text-white border-black  font-Inconsolata "><span class="text-white text-18 text-700 font-Inconsolata">CONTACT
+                            US</span> <img src="./images/arrow-right.svg"></button>
                 </div>
             </div>
             <div class="w-730 md-mtop-40 md-grid-span-5 position-relative owerflov-hidden">
