--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </nav>
     </header>
     <main class="max-w-1310 mx-auto ">
-        <div class=" grid md-grid-col-9 gap-63">
+        <div class=" grid md-grid-col-9 gap-63 ">
             <div class="w-548 md-mtop-100 top-50 md-grid-span-4 px-20">
-                <h1 class="text-32 lg-text-52 text-700 text-black font-raleway">
+                <h1 class="text-32 lg-text-52 text-700 text-black font-raleway  mtop-25">
                     Create a modern and unique design your dream
                 </h1>
                 <p class="text-18 text-600 text-3d3d3d ptop-15 md-ptop-35 font-Inconsolata ">
@@ -51,10 +51,10 @@
             </div>
             <div class="w-730 md-mtop-40 md-grid-span-5 position-relative owerflov-hidden">
                 <img src="./images/Rectangle 1.png" width="100%" height="100%" class="object-cover">
-                <div class="position-absalyute flex icetms-center gap-15 bg-blur p-6-15">
+                <button class="position-absalyute flex icetms-center gap-15 bg-blur p-6-15 border-none">
                     <a href="#"><img src="./images/chevron-left.svg"></a>
                     <a href="#"><img src="./images/chevron-right.svg"></a>
-                </div>
+                </button>
             </div>
         </div>
         <div class="flex icetms-center flex-column md-flex-row  px-20 mtop-40 md-mtop-100 gap-30 md-gap-94">
@@ -302,7 +302,7 @@
             </div>
            <div class="grid grid-col-1 md-grid-col-2 gap-30">
             <div class="flex flex-column ">
-                <a href="#" class="text-18 text-700 text-black font-raleway text-decoration-none">About</a>
+                <h2 class="text-18 text-700 text-black font-raleway text-decoration-none">About</h2>
                 <a href="#" class="text-18 text-700 text-3d3d3d font-Inconsolata text-decoration-none ptop-25">About Us</a>
                 <a href="#" class="text-18 text-700 text-3d3d3d font-Inconsolata text-decoration-none">Services</a>
                 <a href="#" class="text-18 text-700 text-3d3d3d font-Inconsolata text-decoration-none">Portfolio</a>
@@ -311,7 +311,7 @@
                 <a href="#" class="text-18 text-700 text-3d3d3d font-Inconsolata text-decoration-none">Sho</a>
             </div>
             <div class="flex flex-column">
-                <a href="#" class="text-18 text-700 text-black font-raleway text-decoration-none">Office</a>
+                <h2 class="text-18 text-700 text-black font-raleway text-decoration-none">Office</h2>
                 <a href="#" class="text-18 text-700 text-3d3d3d font-Inconsolata text-decoration-none ptop-25">Scandinavian design</a>
                 <a href="#" class="text-18 text-700 text-3d3d3d font-Inconsolata text-decoration-none">Smart House</a>
                 <a href="#" class="text-18 text-700 text-3d3d3d font-Inconsolata text-decoration-none">Modern Design</a>
@@ -324,10 +324,10 @@
                     <div>
                         <input type="email" placeholder="Email" class=" text-18 text-700 text-3d3d3d font-Inconsolata  border-none  outline-none bg-f2f2f2">
                     </div>
-                    <div class="py-8 px-20 bg-black">
+                    <button class="py-8 px-20 bg-black border-none">
                         <a href="#"><img src="./images/footer right.svg" ></a>
-                    </div>
-               </div>
+                    </button>
+               </div> 
                <div class="flex gap-30 mtop-40">
                     <a href="#"><img src="./images/instagram.svg" ></a>
                     <a href="#"><img src="./images/youtube.svg" ></a>
